# facilethings-cli

./: Cargo.toml  README.md  api_stuff.md  openapi.yaml
facilethings-openapi/: Cargo.toml  README.md
facilethings-openapi/.openapi-generator/: FILES
facilethings-openapi/docs/: DefaultApi.md  OAuthFlowPasswordRequestBody.md  OAuthFlowPasswordResponseBody.md  Stuff.md  StuffResponse.md  StuffResponseStuff.md  StuffResponseStuffProject.md  StuffStuff.md  StuffStuffProject.md  StuffWrapper.md  StuffWrapperStuff.md  StuffWrapperStuffProject.md
facilethings-openapi/src/apis/: configuration.rs  default_api.rs
facilethings-openapi/src/models/: mod.rs  o_auth_flow_password_request_body.rs  o_auth_flow_password_response_body.rs  stuff.rs  stuff_response.rs  stuff_response_stuff.rs  stuff_response_stuff_project.rs  stuff_stuff.rs  stuff_stuff_project.rs  stuff_wrapper.rs  stuff_wrapper_stuff.rs  stuff_wrapper_stuff_project.rs
hack/: openapi-generate-client.sh
src/: main.rs
