[package]
name = "facilethings-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
facilethings-openapi = { path = "./facilethings-openapi" }
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"

[workspace]

members = [
    "facilethings-openapi",
]